FEAT: 도네이션 모달 일부 구현

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,9 @@
   --dark-white: #8c92ab;
   --white: #f7f7f8;
   --yellow: #d2c030;
+
   --rectangle-blue: #051d31;
+  --error-red: #ff3b3b;
 
   /* Brand color */
   --brand-coral: #f96d69;
